Enhances contact form and admin dashboard
Adds phone number to the contact form and database,
and displays it in the admin contact dashboard.

Added the rest of the news pages and fixed them to work perfectly

Protects the admin contact dashboard PHP file and the .vscode directory from direct access.

Updates the project name in composer.json and regenerates the composer.lock file.

Corrects news image paths and applies styling to news articles.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -538,16 +538,17 @@ header nav .nav-item a:hover {
 
 .news-article img {
     margin: 30px auto;
-    width: auto;
-    height: auto;
+    width: 70%;
+    height: 40%;
+    display: flex;
     object-fit: cover;
-    display: flow;
     border: 1px solid transparent;
     border-radius: 10px;
     box-shadow: 0 0 30px -10px rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(4px);
     overflow: hidden;
 }
+
 
 .news-article p {
     font-family: "Space Mono", monospace;
