--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@ body {
     font-weight: 400;
     font-style: normal;
     display: flex;
-height: 100%;
+    height: 100%
 
 
 }
@@ -167,6 +167,11 @@ header nav .nav-item a:hover {
 
 .admincontact button:hover {
     background-color: #d32f2f;
+}
+
+
+.div-margin-news-temp {
+    margin: 50px 500px;
 }
 
 
@@ -582,7 +587,8 @@ header nav .nav-item a:hover {
 
 }
 .news-card-text {
-padding: 30px 30px;
+    padding: 30px;
+    margin-bottom: 260px;
     text-align: center;
 }
 
